# rpi_i2c_gyro

./: CMakeLists.txt  mpu6050_i2c.cpp  rpi_i2c_gyro.uf2
